--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Listify</title>
-        <script src="main.js" defer></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
         <style>
             .material-symbols-outlined {
                 font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
             }
         </style>
-        <link rel="icon" type="image/x-icon" href="favicon.svg" />
+        <link rel="icon" type="image/x-icon" href="<%=require('./images/favicon.svg')%>" />
     </head>
     <body>
         <div class="main-wrapper" hidden>
@@ -78,7 +77,7 @@
 
                     <div id="project-tasks" data-current-project="0"></div>
                     <div class="placeholder-wrapper">
-                        <img class="placeholder-image" src="./placeholder.png" />
+                        <img class="placeholder-image" src="<%=require('./images/placeholder.png')%>" />
                         Looks like you're free for now!
                     </div>
                 </div>
@@ -97,8 +96,8 @@
                     </div>
                     <hr />
                     <div class="signup-submit-buttons">
-                        <button type="submit" id="empty-template-button" class="project-button ">Empty Template</button>
-                        <button type="submit" id="demo-template-button" class="project-button ">Demo Template</button>
+                        <button type="submit" id="empty-template-button" class="project-button">Empty Template</button>
+                        <button type="submit" id="demo-template-button" class="project-button">Demo Template</button>
                     </div>
                 </form>
             </div>
