Initial dist subtree commit

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
             }
         </style>
-        <link rel="icon" type="image/x-icon" href="<%=require('./images/favicon.svg')%>" />
-    </head>
+        <link rel="icon" type="image/x-icon" href="d90af492c3ed5bb61c1e.svg" />
+    <script defer src="main.js"></script></head>
     <body>
         <div class="main-wrapper" hidden>
             <aside class="sidebar">
@@ -77,7 +77,7 @@
 
                     <div id="project-tasks" data-current-project="0"></div>
                     <div class="placeholder-wrapper">
-                        <img class="placeholder-image" src="<%=require('./images/placeholder.png')%>" />
+                        <img class="placeholder-image" src="8b95379099ffd311640b.png" />
                         Looks like you're free for now!
                     </div>
                 </div>
